# daily-ai-ml

Decision_Tree/: test.py
DeepLearning/: test.ipynb  test.py
Fake news Classifier using LSTM/: test.py
KMeans/: test.py
KNN/: test.py
Linear_regression/: house_price.csv  test.py  test1.py
ML project/: index.py
Practice/: test.py
Preprocessing/: index.py
Projects/Credit card customer Segmentaion/: test.py
Projects/Customer Segmentation/: test.py
Pytorch/: index.ipynb
RAG/: pyproject.toml
RAG/data/text_files/: random_entries.xlsx
RAG/notebook/: document.ipynb
Random_Forest/: test.py
SVM/: test.py
ScikitLearn/: metrics.py  test.py
Transformers/: Cnn_classifier.ipynb  index.ipynb
Vector DB/: chromadb.ipynb
libraries/: deepak.py  orders.csv
