[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "ipykernel>=7.3.0",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-text-splitters>=1.1.2",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "unstructured>=0.24.1",
]
